[metadata]
name = ama-cryptography
version = 2.0
description = Quantum-resistant cryptographic protection system for helical mathematical Omni-Codes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Steel-SecAdv-LLC/AMA-Cryptography
author = Andrew E. A.
author_email = steel.sa.llc@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.8
# Note: pyproject.toml is the authoritative source for dependencies.
# This section is kept in sync for compatibility with older tools.
install_requires =

[options.extras_require]
monitoring =
    numpy>=1.24.0,<3.0.0
    scipy>=1.7.0
legacy =
    # PyCA cryptography — only needed as fallback when native C library is not available
    cryptography>=46.0.5
hsm =
    # PKCS#11 support for hardware security modules
    PyKCS11>=1.5.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-timeout>=2.1.0
    pytest-benchmark>=4.0.0
    pytest-xdist>=3.0.0
    hypothesis>=6.0.0
    black>=25.11.0; python_version >= "3.9"
    ruff>=0.4.0
    mypy>=1.9.0
    isort>=5.12.0
    bandit>=1.7.0
    safety>=2.3.0
    numpy>=1.24.0,<2.0.0; python_version < "3.9"
    numpy>=1.24.0; python_version >= "3.9"
    scipy>=1.10.0,<1.11.0; python_version < "3.9"
    scipy>=1.11.0; python_version >= "3.9"

# Ruff replaces flake8 — configuration lives in pyproject.toml [tool.ruff]

# isort configuration
[isort]
profile = black
skip_glob =
    examples/*,
    benchmarks/*,
    src/cython/*
