[metadata]
name = ama-cryptography
version = 2.1.2
description = Quantum-resistant cryptographic protection system for helical mathematical Omni-Codes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Steel-SecAdv-LLC/AMA-Cryptography
author = Andrew E. A.
author_email = steel.sa.llc@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.9
# Note: pyproject.toml is the authoritative source for dependencies.
# This section is kept in sync for compatibility with older tools.
install_requires =

[options.extras_require]
math =
    numpy>=1.24.0,<3.0.0
    Cython>=3.2.4
monitoring =
    numpy>=1.24.0,<3.0.0
    scipy>=1.7.0
legacy =
    # PyCA cryptography — only needed as fallback when native C library is not available
    cryptography>=41.0.7
hsm =
    # PKCS#11 support for hardware security modules
    PyKCS11>=1.5.0
secure-memory =
    # PyNaCl reserved for future libsodium integration
    pynacl>=1.6.2
docs =
    sphinx>=7.4.7
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=2.3.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-timeout>=2.1.0
    pytest-benchmark>=4.0.0
    pytest-xdist>=3.0.0
    hypothesis>=6.0.0
    black>=26.3.1; python_version >= "3.10"
    ruff>=0.4.0
    mypy>=1.9.0
    bandit>=1.7.0
    safety>=2.3.0
    numpy>=1.24.0
    scipy>=1.11.0

# Ruff replaces flake8 + isort — configuration lives in pyproject.toml [tool.ruff]
